--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1192,8 +1192,8 @@ section {
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  /* width: 90px; */
-  /* border-radius: 50px; */
+  width: 90px;
+  border-radius: 50px;
   border: 6px solid #fff;
   float: left;
   margin: 0 10px 0 0;
